dropdown left overflow issue fixed

--- a/styles/DropDown.module.scss
+++ b/styles/DropDown.module.scss
@@ -1,5 +1,4 @@
 @use "variables" as *;
-@use "variables" as *;
 
 .dropdown {
   position: relative;
@@ -8,12 +7,11 @@
 .content {
   position: absolute;
   top: 100%;
-  right: 0;
+  left: 0;
   background-color: $light;
   height: auto;
   width: auto;
   display: block;
-  // z-index: $zIndex3;
   border-radius: 5px;
   padding: $space2;
   box-shadow: 0 2px 5px 1px $regular;
